Improved performance and accesability.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,14 +1,15 @@
 a {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
-h2, h3 {
-    font-weight: 400 !important;
+h2,
+h3 {
+  font-weight: 400 !important;
 }
 
 .heroBox {
   text-align: center;
-    height: 600px !important;
-    padding: 24px !important;
+  height: 600px !important;
+  padding: 24px !important;
 }
 
 .finalCTA {
