--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -9,7 +9,7 @@
 }
 
 .title {
-    margin-right: 48px !important;
+  margin-right: 48px !important;
 }
 
 .page {
@@ -17,7 +17,7 @@
 }
 
 .cta {
-    margin-left: auto !important;
+  margin-left: auto !important;
 }
 .ctaBtn {
   margin-right: 24px !important;
@@ -33,30 +33,15 @@
   bottom: 0 !important;
 }
 
-.mobile {
-  visibility: hidden !important;
-  text-align: center !important;
-  position: fixed !important;
-  top: 0 !important;
-  bottom: 0 !important;
-  div {
-    position: absolute !important;
-    bottom: 50% !important;
-    right: 50% !important;
-    transform: translate(50%, 0%) !important;
-    div h4 {
-      margin-bottom: 24px !important;
-    }
-  }
-}
-
-@media(max-width: 846px) {
-  html, body {
+@media (max-width: 846px) {
+  html,
+  body {
     overflow: hidden !important;
-    position: fixed !important;
     height: 100% !important;
   }
-  .computerOnly, .page, .cta {
+  .computerOnly,
+  .page,
+  .cta {
     visibility: hidden !important;
   }
   .header {
@@ -67,16 +52,13 @@
     position: fixed !important;
     bottom: 0 !important;
   }
-  .mobile {
-    visibility: visible !important;
-  }
   .finalCTA {
     position: fixed !important;
     bottom: 50% !important;
     right: 50% !important;
     transform: translate(50%, 55%) !important;
-      h3 {
-        visibility: hidden !important;
-      }
+    h3 {
+      visibility: hidden !important;
+    }
   }
 }
